rework the 'how does it work' section

--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -45,6 +45,12 @@ all others can just start the app they receive in the chat,
 and everyone can forward apps to other chats without restrictions,
 and without any kind of central tracking. 
 
+If your version of Delta Chat is older than 1.38,
+the store app will not work properly;
+you can not share downloaded webxdc apps to a chat then.
+[Just upgrade your Delta Chat app](download)
+to make it work.
+
 ### I don't have Delta Chat yet, how can I play with this?  {#tryout}
 
 [Install Delta Chat](https://get.delta.chat) and in the setup-screen 
@@ -62,62 +68,6 @@ to try out a cheap method of safely syncing notes,
 checklists or calendars between your devices
 without any servers or additional accounts. 
 
-
-## How does xstore work? Where does it get its apps from? 
-
-XXX describe and link xdcget and xdcstore and that xstore is a deployment of these tools
-XXX turn the below into 3-4 bullet notes 
-
-webxdc apps can not access the Internet.
-That's what makes them private.
-So if you share the store app to another chat,
-it will not work there.
-Only because
-[xstore@testrun.org](mailto:xstore@testrun.org)
-is a chat bot which gets told by the store app
-which app you want to download,
-it can download the app from the Internet
-and send it to you in the chat.
-
-If you deleted the store or
-chose "clear chat" to clean up,
-you can at any point in time just send "hi"
-to [xstore@testrun.org](mailto:xstore@testrun.org) again,
-and it will re-send the store to the chat.
-
-**Note:**
-if your version of Delta Chat is older than 1.38,
-the store app will not work properly;
-you can not share downloaded webxdc apps to a chat then.
-[Just upgrade your Delta Chat app](download)
-to make it work.
-
-**And another note:**
-if you use the XMPP messenger cheogram,
-xstore will not work for you yet;
-but with upcoming support for webxdc in XMPP/e-mail bridges
-you might be able to message [xstore@testrun.org](mailto:xstore@testrun.org)
-and download apps from there.
-
-## Do I have to use the official xstore?
-
-Of course not.
-You can always share a webxdc app from one chat to another;
-without DRM,
-without tracking,
-without login/consent barriers.
-Any webxdc app is just a .xdc file
-saved as an e-mail attachment.
-
-Additionally to that,
-you can also self-host the bot
-we use to offer xstore.
-You can find installation instructions
-[in the bot's codeberg repository](https://codeberg.org/webxdc/store/#setting-up-the-bot).
-It works best together with [xdcget](https://codeberg.org/webxdc/xdcget/),
-a command line tool
-which downloads webxdc apps
-from git repositories.
 
 ## How can I submit my own webxdc app to xstore?
 
@@ -147,4 +97,46 @@ just with much less complexity.
 We are looking forward to your contributions,
 and hope you have fun with webxdc apps in Delta Chat!
 
+
+## How does xstore work? Where does it get its apps from? 
+
+[xstore@testrun.org](mailto:xstore@testrun.org) is a chat bot instance.
+After you send “Hi” to the bot,
+you receive and start the store app,
+which continues to communicate with the bot
+for selecting and downloading apps.
+You can not share the store app
+to another chat.
+That’s because
+webxdc apps can not access the Internet,
+only the bot.
+
+If it was a website,
+you could say
+the store app is the frontend,
+the store bot is the backend.
+
+The xstore chat bot
+collects webxdc apps from a list of “git” repository sources
+and will continously offer the latest released app versions.
+You can also self-host the store bot:
+checkout installation instructions
+in the [bot’s codeberg repository](https://codeberg.org/webxdc/store/).
+It works well together with [xdcget](https://codeberg.org/webxdc/xdcget/),
+a command line tool
+which downloads webxdc releases
+from git public repositories. 
+
+### Important Notes:
+
+- If you deleted the store or
+  chose "clear chat" to clean up,
+  you can at any point in time just send "hi"
+  to [xstore@testrun.org](mailto:xstore@testrun.org) again,
+  and it will re-send the store to the chat.
+- If you use the XMPP messenger cheogram,
+  xstore will not work for you yet;
+  but with upcoming support for webxdc in XMPP/e-mail bridges
+  you might be able to message [xstore@testrun.org](mailto:xstore@testrun.org)
+  and download apps from there.
 
