--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -140,3 +140,12 @@ from git public repositories.
   you might be able to message [xstore@testrun.org](mailto:xstore@testrun.org)
   and download apps from there.
 
+<img alt="NLNet Logo" src="../assets/logos/logo_nlnet.svg" width="140" style="float:right; margin-left:1em;" />  
+This project was made possible
+through the funding and support
+of the [NGI0 Entrust Fund](https://nlnet.nl/entrust),
+a fund established by [NLnet](https://nlnet.nl/)
+with financial support
+from the European Commission's [Next Generation Internet](https://ngi.eu/) programme.
+Thank you very much for this opportunity!
+
