move 'only one chat member needs to talk to the bot' down

--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -40,12 +40,7 @@ With Delta Chat already working it's dead simple to **start**:
 3. Share the downloaded app to a chat so that all members 
    can **Start** the app without any logins, cookie or GDPR screens.
 
-Note that only one chat member needs to use xstore@testrun.org while
-all others can just start the app they receive in the chat, 
-and everyone can forward apps to other chats without restrictions,
-and without any kind of central tracking. 
-
-If your version of Delta Chat is older than 1.38,
+Note that if your version of Delta Chat is older than 1.38,
 the store app will not work properly;
 you can not share downloaded webxdc apps to a chat then.
 [Just upgrade your Delta Chat app](download)
@@ -134,6 +129,10 @@ from git public repositories.
   you can at any point in time just send "hi"
   to [xstore@testrun.org](mailto:xstore@testrun.org) again,
   and it will re-send the store to the chat.
+- Only one chat member needs to use xstore@testrun.org while
+all others can just start the app they receive in the chat, 
+and everyone can forward apps to other chats without restrictions,
+and without any kind of central tracking. 
 - If you use the XMPP messenger cheogram,
   xstore will not work for you yet;
   but with upcoming support for webxdc in XMPP/e-mail bridges
