use screenshot at setup steps, move logo below

--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -29,7 +29,7 @@ Let's take the open web of streets back from the online-platform billionaires :)
 
 ## How to start
 
-<img src="../assets/logos/store.png" width="140" style="float:right; margin-left:1em;" />  
+<img src="../assets/blog/2023-08-xstore-start.png" width="240" style="float:right; margin-left:1em;" />  
 With Delta Chat already working it's dead simple to **start**:
 
 1. Say "hi" to [xstore@testrun.org](mailto:xstore@testrun.org?body=hi)
@@ -95,6 +95,7 @@ and hope you have fun with webxdc apps in Delta Chat!
 
 ## How does xstore work? Where does it get its apps from? 
 
+<img src="../assets/logos/store.png" width="140" style="float:right; margin-left:1em;" />  
 [xstore@testrun.org](mailto:xstore@testrun.org) is a chat bot instance.
 After you send “Hi” to the bot,
 you receive and start the store app,
