--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -96,7 +96,7 @@ and hope you have fun with webxdc apps in Delta Chat!
 ## How does xstore work? Where does it get its apps from? 
 
 <img src="../assets/logos/store.png" width="140" style="float:right; margin-left:1em;" />  
-[xstore@testrun.org](mailto:xstore@testrun.org) is a chat bot instance.
+[xstore@testrun.org](mailto:xstore@testrun.org?body=hi) is a chat bot instance.
 After you send “Hi” to the bot,
 you receive and start the store app,
 which continues to communicate with the bot
@@ -128,7 +128,7 @@ from git public repositories.
 - If you deleted the store or
   chose "clear chat" to clean up,
   you can at any point in time just send "hi"
-  to [xstore@testrun.org](mailto:xstore@testrun.org) again,
+  to [xstore@testrun.org](mailto:xstore@testrun.org?body=hi) again,
   and it will re-send the store to the chat.
 - Only one chat member needs to use xstore@testrun.org while
 all others can just start the app they receive in the chat, 
@@ -137,7 +137,7 @@ and without any kind of central tracking.
 - If you use the XMPP messenger cheogram,
   xstore will not work for you yet;
   but with upcoming support for webxdc in XMPP/e-mail bridges
-  you might be able to message [xstore@testrun.org](mailto:xstore@testrun.org)
+  you might be able to message [xstore@testrun.org](mailto:xstore@testrun.org?body=hi)
   and download apps from there.
 
 <img alt="NLNet Logo" src="../assets/logos/logo_nlnet.svg" width="140" style="float:right; margin-left:1em;" />  
