refined part about developing webxdc apps

--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -68,26 +68,33 @@ without any servers or additional accounts.
 
 So far,
 we already have more than 20 webxdc apps in xstore.
-The number is growing fast,
-because it's so easy to adjust any web app
-so it works as a webxdc app in Delta Chat.
+It is easy to adjust web apps
+so they work as webxdc apps in Delta Chat.
+And by exchanging updates between different Delta Chat users,
+you can make them collaborative.
 
 To get started with development,
-you can learn more about webxdc apps on [webxdc.org](https://webxdc.org)
-(`webxdc` is the technical term for webxdc apps).
+take a look [at the docs](https://docs.webxdc.org/).
 You can also take other webxdc apps as an example;
 in xstore you can find links to any app's source code
 by clicking on "More":
 
 ![Details of the checklist app, it shows a description, date, file size, and link to source code.](../assets/blog/2023-08-xstore-more.png)
 
-If you want to make your own webxdc app available,
+If you want to make your own webxdc app available in xstore,
 just go on [codeberg.org](https://codeberg.org/webxdc/xdcget)
 (a github alternative)
-And open a pull request to our xdcget config file,
+and open a pull request to our xdcget config file,
 like [in this example](https://codeberg.org/webxdc/xdcget/pulls/50).
 It's works basically like in F-Droid,
 just with much less complexity.
+
+If you submit an app,
+we'll send you "delta chat" and "webxdc" stickers by postal mail,
+and also provide an account token
+for giving out fully functional chat-mail accounts
+(not restricted like on @try.webxdc.org)
+to five friends or family.
 
 We are looking forward to your contributions,
 and hope you have fun with webxdc apps in Delta Chat!
