--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -27,6 +27,9 @@ All app interactions are automatically **end-to-encrypted
 and offline-first**: they all safely work in bad or no-network situations. 
 Let's take the open web of streets back from the online-platform billionaires :) 
 
+<img src="../assets/blog/2023-08-xstore-appicons.png" width="380" style="margin-top: 1em;" />  
+*Some of the existing webxdc apps available in xstore.*
+
 ## How to start
 
 <img src="../assets/blog/2023-08-xstore-start.png" width="240" style="float:right; margin-left:1em;" />  
