opinionated: swap images around

--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -1,11 +1,11 @@
 ---
-title: Everything-apps without platforms - say "hi" to xstore :)
+title: Everything-apps without platforms - say "hi" to xstore 😊
 author: missytake, holga
 image: ../assets/blog/2023-08-xstore-appicons.png
 ---
 
 
-<img src="../assets/blog/reclaim-the-streets.jpg" width="340" style="float:right; margin-left:1em;" />  
+<img src="../assets/blog/2023-08-xstore-appicons.png" width="240" style="float:right; margin-left: 1em;" />  
 Others are hand-wavingly chattering about so called "super-app" or "everything app" architectures, 
 but we prefer to just [deliver](https://delta.chat/en/2022-06-14-webxdcintro)
 and [improve](http://delta.chat/en/2023-06-28-webxdc-import-export) them.
@@ -18,6 +18,7 @@ Today, we are happy to announce a new way to **find and start**
 
 - a first editor app – think Cryptpad but without servers. 
 
+<img src="../assets/blog/reclaim-the-streets.jpg" width="340" style="float:left; margin-right:1em;" />  
 [Rest-assured](https://delta.chat/en/2023-05-22-webxdc-security), 
 nobody else than your chat partners will know 
 that you are running an app together.
@@ -25,10 +26,7 @@ There is no server or app-specific hosting and
 not even the app developer or the xstore bot can track what you do. 
 All app interactions are automatically **end-to-encrypted
 and offline-first**: they all safely work in bad or no-network situations. 
-Let's take the open web of streets back from the online-platform billionaires :) 
-
-<img src="../assets/blog/2023-08-xstore-appicons.png" width="380" style="margin-top: 1em;" />  
-*Some of the existing webxdc apps available in xstore.*
+Let's take the open web of streets back from the online-platform billionaires 😊
 
 ## How to start
 
