--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -18,7 +18,6 @@ Today, we are happy to announce a new way to **find and start**
 
 - a first editor app – think Cryptpad but without servers. 
 
-<img src="../assets/blog/reclaim-the-streets.jpg" width="340" style="float:left; margin-right:1em;" />  
 [Rest-assured](https://delta.chat/en/2023-05-22-webxdc-security), 
 nobody else than your chat partners will know 
 that you are running an app together.
@@ -27,6 +26,8 @@ not even the app developer or the xstore bot can track what you do.
 All app interactions are automatically **end-to-encrypted
 and offline-first**: they all safely work in bad or no-network situations. 
 Let's take the open web of streets back from the online-platform billionaires 😊
+
+<img alt="A photograph of a bicycle gathering, with a banner saying 'reclaim the streets'." src="../assets/blog/reclaim-the-streets.jpg" style="max-height:300px;" />  
 
 ## How to start
 
