add a ⚠️  to the version warning

--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -42,7 +42,7 @@ With Delta Chat already working it's dead simple to **start**:
 3. Share the downloaded app to a chat so that all members 
    can **Start** the app without any logins, cookie or GDPR screens.
 
-Note that if your version of Delta Chat is older than 1.38,
+⚠️  Note that if your version of Delta Chat is older than 1.38,
 the store app will not work properly;
 you can not share downloaded webxdc apps to a chat then.
 [Just upgrade your Delta Chat app](download)
