actually there is an email server involved

--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -62,8 +62,7 @@ just share apps with your "Saved Messages" chat to play
 the occassional game without any ads or tracking. 
 Or maybe also use the "add second device" feature 
 to try out a cheap method of safely syncing notes, 
-checklists or calendars between your devices
-without any servers or additional accounts. 
+checklists or calendars between your devices.
 
 
 ## How can I submit my own webxdc app to xstore?
