--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -62,7 +62,8 @@ just share apps with your "Saved Messages" chat to play
 the occassional game without any ads or tracking. 
 Or maybe also use the "add second device" feature 
 to try out a cheap method of safely syncing notes, 
-checklists or calendars between your devices.
+checklists or calendars between your devices
+without any additional servers or accounts.
 
 
 ## How can I submit my own webxdc app to xstore?
