--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -112,7 +112,7 @@ You can not share the store app
 to another chat.
 That’s because
 webxdc apps can not access the Internet,
-only the bot.
+the store app needs the bot to download apps.
 
 If it was a website,
 you could say
