--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -45,8 +45,7 @@ With Delta Chat already working it's dead simple to **start**:
 ⚠️  Note that if your version of Delta Chat is older than 1.38,
 the store app will not work properly;
 you can not share downloaded webxdc apps to a chat then.
-[Just upgrade your Delta Chat app](download)
-to make it work.
+[Please upgrade your Delta Chat app, especially on Desktop](download). 
 
 ### I don't have Delta Chat yet, how can I play with this?  {#tryout}
 
@@ -58,7 +57,7 @@ scan this invitation code to get an instant e-mail test account:
 The test e-mail account will only exist 90 days
 and it does not allow to send chat mails to most "outside" e-mail addresses. 
 But if you want to test things for yourself,
-just share apps with your "Saved Messages" chat to play
+you may share apps with your "Saved Messages" chat to play
 the occassional game without any ads or tracking. 
 Or maybe also use the "add second device" feature 
 to try out a cheap method of safely syncing notes, 
@@ -68,7 +67,7 @@ without any additional servers or accounts.
 
 ## How can I submit my own webxdc app to xstore?
 
-It is easy to adjust web apps
+It is easy to adjust or write web apps
 so they work as webxdc apps in Delta Chat.
 And by exchanging updates between different Delta Chat users,
 you can make them collaborative.
@@ -81,23 +80,33 @@ by clicking on "More":
 
 ![Details of the checklist app, it shows a description, date, file size, and link to source code.](../assets/blog/2023-08-xstore-more.png)
 
-If you want to make your own webxdc app available in xstore,
-just go on [codeberg.org](https://codeberg.org/webxdc/xdcget)
+If you want to make a new webxdc app available in xstore,
+onboard with [codeberg.org](https://codeberg.org/webxdc/xdcget)
 (a github alternative)
 and open a pull request to our xdcget config file,
 like [in this example](https://codeberg.org/webxdc/xdcget/pulls/50).
 It's works basically like in F-Droid,
 just with much less complexity.
 
-If you submit an app,
-we'll send you "delta chat" and "webxdc" stickers by postal mail,
-and also provide an account token
-for giving out fully functional chat-mail accounts
+
+### 🎉 Bounties for the next 23 app submissions 🎉 
+
+<img src="../assets/blog/stickers.jpeg" width="100" style="float:left; margin-right:1em;" />  
+
+If you submit an webxdc app and it gets included,
+we'd be happy to send you "delta chat" and "webxdc" stickers by postal mail,
+and would provide an account QR token
+so you can hand out five fully functional chat-mail accounts
 (not restricted like on @try.webxdc.org)
-to five friends or family.
+to friends or family.
+
+It's fine to just port existing apps 
+but please make sure they behave well on both mobile and desktop platforms. 
+Maybe checkout the evolving [webxdc-dev](https://github.com/webxdc/webxdc-dev) 
+npm-installable tool to test your app with multiple devices. 
 
 We are looking forward to your contributions,
-and hope you have fun with webxdc apps in Delta Chat!
+and hope you join the fun with webxdc apps :)
 
 
 ## How does xstore work? Where does it get its apps from? 
@@ -114,7 +123,7 @@ That’s because
 webxdc apps can not access the Internet,
 the store app needs the bot to download apps.
 
-If it was a website,
+If it was a normal website from a platform,
 you could say
 the store app is the frontend,
 the store bot is the backend.
@@ -147,12 +156,14 @@ and without any kind of central tracking.
   you might be able to message [xstore@testrun.org](mailto:xstore@testrun.org?body=hi)
   and download apps from there.
 
+## Thanks to NLNET and NGI for their support and vision!
+
 <img alt="NLNet Logo" src="../assets/logos/logo_nlnet.svg" width="140" style="float:right; margin-left:1em;" />  
-This project was made possible
-through the funding and support
+Most of our efforts described above became possible
+through the support
 of the [NGI0 Entrust Fund](https://nlnet.nl/entrust),
-a fund established by [NLnet](https://nlnet.nl/)
+established by [NLnet](https://nlnet.nl/)
 with financial support
 from the European Commission's [Next Generation Internet](https://ngi.eu/) programme.
-Thank you very much for this opportunity!
+Thank a lot!
 
