clarify that you don't need to develop your app on codeberg

--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -83,13 +83,15 @@ by clicking on "More":
 If you want to make a new webxdc app available in xstore,
 onboard with [codeberg.org](https://codeberg.org/webxdc/xdcget)
 (a github alternative)
-and open a pull request to our xdcget config file,
+to open a pull request to our xdcget config file,
 like [in this example](https://codeberg.org/webxdc/xdcget/pulls/50).
+Note that you don't need to have your app git-hosted on Codeberg.
 It's works basically like in F-Droid,
-just with much less complexity.
+but with less complexity 
+and for all common mobile and desktop platforms. 
 
 
-### 🎉 Bounties for the next 23 app submissions 🎉 
+### Bounties for the next 23 app submissions 🎉 
 
 <img src="../assets/blog/stickers.jpeg" width="100" style="float:left; margin-right:1em;" />  
 
