--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -167,5 +167,5 @@ of the [NGI0 Entrust Fund](https://nlnet.nl/entrust),
 established by [NLnet](https://nlnet.nl/)
 with financial support
 from the European Commission's [Next Generation Internet](https://ngi.eu/) programme.
-Thank a lot!
+Thanks a lot!
 
