- bring "reclaim" back to the front because otherwise the flow does not   really work well IMO
- streamline the "how to get started without delta chat"

--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -1,11 +1,10 @@
 ---
 title: Everything-apps without platforms - say "hi" to xstore 😊
 author: missytake, holga
-image: ../assets/blog/2023-08-xstore-appicons.png
+image: ../assets/blog/reclaim.png
 ---
 
-
-<img src="../assets/blog/2023-08-xstore-appicons.png" width="240" style="float:right; margin-left: 1em;" />  
+<img alt="A photograph of a bicycle gathering, with a banner saying 'reclaim the streets'." src="../assets/blog/reclaim-the-streets.jpg" style="max-height:250px;float:right;margin-left:1em" />  
 Others are hand-wavingly chattering about so called "super-app" or "everything app" architectures, 
 but we prefer to just [deliver](https://delta.chat/en/2022-06-14-webxdcintro)
 and [improve](http://delta.chat/en/2023-06-28-webxdc-import-export) them.
@@ -18,6 +17,8 @@ Today, we are happy to announce a new way to **find and start**
 
 - a first editor app – think Cryptpad but without servers. 
 
+<img src="../assets/blog/2023-08-xstore-appicons.png" width="240" style="float:right; margin-left: 1em;" />  
+
 [Rest-assured](https://delta.chat/en/2023-05-22-webxdc-security), 
 nobody else than your chat partners will know 
 that you are running an app together.
@@ -26,8 +27,6 @@ not even the app developer or the xstore bot can track what you do.
 All app interactions are automatically **end-to-encrypted
 and offline-first**: they all safely work in bad or no-network situations. 
 Let's take the open web of streets back from the online-platform billionaires 😊
-
-<img alt="A photograph of a bicycle gathering, with a banner saying 'reclaim the streets'." src="../assets/blog/reclaim-the-streets.jpg" style="max-height:300px;" />  
 
 ## How to start
 
@@ -47,22 +46,43 @@ the store app will not work properly;
 you can not share downloaded webxdc apps to a chat then.
 [Please upgrade your Delta Chat app, especially on Desktop](download). 
 
+
+### I don't have any Delta chat partners yet, can i still play? 
+
+You can test webxdc apps also just for yourself, without any chat group. 
+Share the store apps with your "Saved Messages" chat to play
+the occassional game without any ads or tracking. 
+Or maybe also try the "add second device" feature 
+to make the account work on both your mobile and desktop devices. 
+A multi-device Delta Chat setup provides a 
+cheap method of safely syncing notes, 
+checklists or calendars between your devices
+without any additional servers or accounts.
+
 ### I don't have Delta Chat yet, how can I play with this?  {#tryout}
 
-[Install Delta Chat](https://get.delta.chat) and in the setup-screen 
-scan this invitation code to get an instant e-mail test account: 
+First, visit [get.delta.chat](https://get.delta.chat)
+to install from several stores and download locations. 
 
-[![A QR invite code to get a limited e-mail account at try.webxdc.org.](../assets/blog/try-webxdc-token.png)](DCACCOUNT:https://mailadm.try.webxdc.org/?t=90d_f7v5c5xrtntpkqe&n=try90d)
+Second, start Delta Chat and configure an account in the setup screen: 
+
+- Configure a Delta Chat account using a pre-existing e-mail address
+  and password. 
+  Note: Nobody will see your credentials except your e-mail provider. 
+
+- On Mobile you may [tap this test account creation link](DCACCOUNT:https://mailadm.try.webxdc.org/?t=90d_f7v5c5xrtntpkqe&n=try90d) 
+  in the browser which should open the Delta Chat app and offer to set
+  an avatar and displayname for a new (randomized) e-mail address. 
+
+- On all platforms you may also hit "Scan Invitation Code" 
+  and hold the camera over the following QR code link;
+  on Desktop you can under "more options" also load the QR image from a file.
 
 The test e-mail account will only exist 90 days
 and it does not allow to send chat mails to most "outside" e-mail addresses. 
-But if you want to test things for yourself,
-you may share apps with your "Saved Messages" chat to play
-the occassional game without any ads or tracking. 
-Or maybe also use the "add second device" feature 
-to try out a cheap method of safely syncing notes, 
-checklists or calendars between your devices
-without any additional servers or accounts.
+
+[![A QR invite code to get a limited e-mail account at try.webxdc.org.](../assets/blog/try-webxdc-token.png)](DCACCOUNT:https://mailadm.try.webxdc.org/?t=90d_f7v5c5xrtntpkqe&n=try90d)
+
 
 
 ## How can I submit my own webxdc app to xstore?
