--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -28,6 +28,11 @@ All app interactions are automatically **end-to-encrypted
 and offline-first**: they all safely work in bad or no-network situations. 
 Let's take the open web of streets back from the online-platform billionaires 😊
 
+Read below how to try it out,
+even if you don't have Delta Chat yet,
+how to submit your own app,
+and how the whole thing works:
+
 ## How to start
 
 <img src="../assets/blog/2023-08-xstore-start.png" width="240" style="float:right; margin-left:1em;" />  
