make QR invite code smaller

--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -86,7 +86,7 @@ Second, start Delta Chat and configure an account in the setup screen:
 The test e-mail account will only exist 90 days
 and it does not allow to send chat mails to most "outside" e-mail addresses. 
 
-[![A QR invite code to get a limited e-mail account at try.webxdc.org.](../assets/blog/try-webxdc-token.png)](DCACCOUNT:https://mailadm.try.webxdc.org/?t=90d_f7v5c5xrtntpkqe&n=try90d)
+[<img alt="A QR invite code to get a limited e-mail account at try.webxdc.org." src="../assets/blog/try-webxdc-token.png" style="max-height: 340px; margin-top: 1em;" />](DCACCOUNT:https://mailadm.try.webxdc.org/?t=90d_f7v5c5xrtntpkqe&n=try90d)
 
 
 
