don't promise test accopuints

--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -121,11 +121,10 @@ and for all common mobile and desktop platforms.
 <img src="../assets/blog/stickers.jpeg" width="100" style="float:left; margin-right:1em;" />  
 
 If you submit an webxdc app and it gets included,
-we'd be happy to send you "delta chat" and "webxdc" stickers by postal mail,
-and would provide an account QR token
-so you can hand out five fully functional chat-mail accounts
-(not restricted like on @try.webxdc.org)
-to friends or family.
+we'd be happy to send you "delta chat" and "webxdc" stickers by postal mail.
+Also, if you need some e-mail test accounts (also unrestricted ones)
+you may contact us on the [support forum](https://support.delta.chat) 
+or via [delta@merlinux.eu](mailto:delta@merlinux.eu) address. 
 
 It's fine to just port existing apps 
 but please make sure they behave well on both mobile and desktop platforms. 
