--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -122,9 +122,9 @@ and for all common mobile and desktop platforms.
 
 If you submit an webxdc app and it gets included,
 we'd be happy to send you "delta chat" and "webxdc" stickers by postal mail.
-Also, if you need some e-mail test accounts (also unrestricted ones)
-you may contact us on the [support forum](https://support.delta.chat) 
-or via [delta@merlinux.eu](mailto:delta@merlinux.eu) address. 
+Also, if you need help or need some e-mail test accounts (also unrestricted ones)
+you may contact us on the [webxdc support forum](https://support.delta.chat/c/webxdc/20)
+or [through other channels](https://delta.chat/en/contribute).
 
 It's fine to just port existing apps 
 but please make sure they behave well on both mobile and desktop platforms. 
