even better links

--- a/_posts/2023-08-10-xstore.md
+++ b/_posts/2023-08-10-xstore.md
@@ -6,8 +6,8 @@ image: ../assets/blog/reclaim.png
 
 <img alt="A photograph of a bicycle gathering, with a banner saying 'reclaim the streets'." src="../assets/blog/reclaim-the-streets.jpg" style="max-height:250px;float:right;margin-left:1em" />  
 Others are hand-wavingly chattering about so called "super-app" or "everything app" architectures, 
-but we prefer to just [deliver](https://delta.chat/en/2022-06-14-webxdcintro)
-and [improve](http://delta.chat/en/2023-06-28-webxdc-import-export) them.
+but we prefer to just [deliver](2022-06-14-webxdcintro)
+and [improve](2023-06-28-webxdc-import-export) them.
 Today, we are happy to announce a new way to **find and start** 
 [webxdc "everything" apps](https://webxdc.org), among them: 
 
@@ -19,7 +19,7 @@ Today, we are happy to announce a new way to **find and start**
 
 <img src="../assets/blog/2023-08-xstore-appicons.png" width="240" style="float:right; margin-left: 1em;" />  
 
-[Rest-assured](https://delta.chat/en/2023-05-22-webxdc-security), 
+[Rest-assured](2023-05-22-webxdc-security), 
 nobody else than your chat partners will know 
 that you are running an app together.
 There is no server or app-specific hosting and
@@ -124,7 +124,7 @@ If you submit an webxdc app and it gets included,
 we'd be happy to send you "delta chat" and "webxdc" stickers by postal mail.
 Also, if you need help or need some e-mail test accounts (also unrestricted ones)
 you may contact us on the [webxdc support forum](https://support.delta.chat/c/webxdc/20)
-or [through other channels](https://delta.chat/en/contribute).
+or [through other channels](contribute).
 
 It's fine to just port existing apps 
 but please make sure they behave well on both mobile and desktop platforms. 
