add comments to xstore blogpost

--- a/_posts/2023-08-11-xstore.md
+++ b/_posts/2023-08-11-xstore.md
@@ -2,6 +2,7 @@
 title: Everything-apps without platforms - say "hi" to xstore 😊
 author: missytake, holga
 image: ../assets/blog/reclaim.png
+com_id: 110870357553341495
 ---
 
 <img alt="A photograph of a bicycle gathering, with a banner saying 'reclaim the streets'." src="../assets/blog/reclaim-the-streets.jpg" style="max-height:250px;float:right;margin-left:1em" />  
