single quotes in title

--- a/_posts/2023-08-11-xstore.md
+++ b/_posts/2023-08-11-xstore.md
@@ -1,5 +1,5 @@
 ---
-title: Everything-apps without platforms - say "hi" to xstore 😊
+title: Everything-apps without platforms - say 'hi' to xstore 😊
 author: missytake, holga
 image: ../assets/blog/reclaim.png
 com_id: 110870357553341495
