remove the "streets claim"

--- a/_posts/2023-08-11-xstore.md
+++ b/_posts/2023-08-11-xstore.md
@@ -1,11 +1,11 @@
 ---
 title: Everything-apps without platforms - say 'hi' to xstore 😊
 author: missytake, holga
-image: ../assets/blog/reclaim.png
+image: ../assets/blog/2023-08-xstore-appicons.png
 com_id: 110870357553341495
 ---
 
-<img alt="A photograph of a bicycle gathering, with a banner saying 'reclaim the streets'." src="../assets/blog/reclaim-the-streets.jpg" style="max-height:250px;float:right;margin-left:1em" />  
+<img src="../assets/blog/2023-08-xstore-appicons.png" width="240" style="float:right; margin-left: 1em;" />  
 Others are hand-wavingly chattering about so called "super-app" or "everything app" architectures, 
 but we prefer to just [deliver](2022-06-14-webxdcintro)
 and [improve](2023-06-28-webxdc-import-export) them.
@@ -18,8 +18,6 @@ Today, we are happy to announce a new way to **find and start**
 
 - a first editor app – think Cryptpad but without servers. 
 
-<img src="../assets/blog/2023-08-xstore-appicons.png" width="240" style="float:right; margin-left: 1em;" />  
-
 [Rest-assured](2023-05-22-webxdc-security), 
 nobody else than your chat partners will know 
 that you are running an app together.
@@ -27,12 +25,11 @@ There is no server or app-specific hosting and
 not even the app developer or the xstore bot can track what you do. 
 All app interactions are automatically **end-to-encrypted
 and offline-first**: they all safely work in bad or no-network situations. 
-Let's take the open web of streets back from the online-platform billionaires 😊
-
 Read below how to try it out,
-even if you don't have Delta Chat yet,
-how to submit your own app,
-and how the whole thing works:
+with or without Delta Chat,
+with or without chat partners and also about
+how to submit your own webxdc app and 
+and how the whole thing works.
 
 ## How to start
 
