Mention web version in xstore post

--- a/_posts/2023-08-11-xstore.md
+++ b/_posts/2023-08-11-xstore.md
@@ -180,6 +180,10 @@ and without any kind of central tracking.
   you might be able to message [xstore@testrun.org](mailto:xstore@testrun.org)
   and download apps from there.
 
+### November 2023 Update
+
+We're also experimenting with a [web version](https://webxdc.org/apps) populated with the same dataset as our xstore: simply download the `.xdc` file and drop it in a chat.
+
 ## Thanks to NLNET and NGI for their support and vision!
 
 <img alt="NLNet Logo" src="../assets/logos/logo_nlnet.svg" width="140" style="float:right; margin-left:1em;" />  
