--- a/_posts/2023-11-20-jumbo-42.md
+++ b/_posts/2023-11-20-jumbo-42.md
@@ -1,72 +1,90 @@
 ---
-title: Guaranteed End-to-End encryption and other good news 
+title: Guaranteed End-to-End encryption and other good news
 author: holga
 image: ../assets/home/green-checkmark.svg
 ---
 
-Our rolling 1.42 Delta Chat app releases provide a major security-upgrade
-as we introduce guaranteed end-to-end (E2E) encryption 
-that works consistently and conveniently in all chats. 
-But they also contain and other improvements like: 
+![E2EE from now on](../assets/blog/e2ee-activated.png)
+Our rolling 1.42 Delta Chat app releases introduce 
+guaranteed end-to-end encryption, 
+a major security milestone that took many hundreds of hours 
+of challenging work from core Delta Chat teams, experts and collaborators.
+Friends from activist circles, users and operators of security-related helplines,
+as well as [TeamUSEC](https://teamusec.de) 
+all helped us to streamline usability and implementation issues 
+for guaranteed end-to-end encryption. 
 
-- 🔄 Accept/Blocked, Archived, Pinned, Mute is synced across all your devices
-
-- 🗜️ Images are now compressed (unless you send them as files)
-
-- 🖼️ Global Gallery with your pictures, documents, media across all chats
-
-- Bug fixes, bug fixes and bug fixes 
-
-In the remainder of the post, 
-we highlight the background of our past and present end-to-end encryption developments. 
 
 ## Autocrypt: convenient but "opportunistic" E2E security 
 
 <img src="../assets/logos/autocrypt.svg" width="140" style="float:right; margin-left:1em;" />  
 
-Let us recall a frequent criticism of Delta Chat's [Autocrypt](https://autocrypt.org) 
-end-to-end encryption, namely it's "opportunistic" nature: 
+Let us recall two frequent criticism of Delta Chat's [Autocrypt](https://autocrypt.org) 
+end-to-end encryption and its *opportunistic* nature: 
 
-a) E-mail providers could try to meddle with 
-   the communication of their users, reading or modifying their messages. 
-   This is arguably a stronger concern for Delta Chat than with Signal, Whatsapp 
-   or other centralized messengers 
-   because Delta Chat users can choose but not neccessarily trust their e-mail provider. 
+- [MITM attack](https://en.wikipedia.org/wiki/Man-in-the-middle_attack): 
+  Compromised infrastructure is arguably a stronger concern 
+  for Delta Chat than Signal or Whatsapp users.
+  After all, there is a not a single central 
+  but many hundreds of different e-mail providers used with Delta Chat today,
+  many of which are operating in surveillance oriented environments
+  or are otherwise exposed to capable adversaries. 
 
-b) Users can encounter an irritating lack of end-to-end encryption 
-   if someone is added to a group chat who doesn't consistently use Autocrypt. 
-   They would send an un-encrypted message and only notice it after they sent a message. 
+- **Surprises because of unencrypted messages**: 
+  Users can encounter an irritating lack of end-to-end encryption 
+  when they send a first message or 
+  if their chat partners don't consistently use Autocrypt-capable apps.
+  They would send an un-encrypted message and only notice it after they sent a message. 
+  In practise, this is less of a problem than many experts think 
+  but no question: it is a valid concern. 
 
-Both issues are addressed with the currently rolling out 1.42 Delta Chat app releases. 
-"Guaranteed end-to-end encrypted chats" prevent both 1:1 chats and group chats 
+<img src="../assets/blog/join_verified_group.jpg" width="240" style="float:right; margin-left: 1em;" />
+
+Both issues are addressed with the currently rolling out 1.42 Delta Chat app releases
+as "Guaranteed end-to-end encryption" prevents messages 
 from unexpectedly dropping end-to-end encryption,
-and they provide protection against compromised servers or networks. 
+and protects against compromised servers or networks. 
 
-## Guaranteed end-to-end encrypted chats 
+## Guaranteed end-to-end encryption
+
+Chats marked with a green checkmark guarantee end-to-end encryption:
+You will only send and receive end-to-end encrypted messages
+that can not be read or modified by hostile e-mail servers or networks.
+
+To start a guaranteed end-to-end encrypted 1:1 chat,
+you scan another user's "QR Invite code" 
+which starts the automatic [SecureJoin protocol](https://securejoin.delta.chat)
+resulting in a safely end-to-end encrypted chat and a green-checkmarked contact. 
+
+If you create a group that only has green-checkmarked contacts
+then this group will use guaranteed end-to-end encryption
+that never degrades and can not be broken by e-mail providers or network attackers. 
+Moreover, all members use guaranteed end-to-end encrypted chats with each other,
+and they can add each other to more and different green checkmarked group chats. 
+**Guaranteed end-to-end encryption spreads automatically and in a decentralized way.**
 
 <img src="../assets/home/green-checkmark.svg" width="140" style="float:right; margin-left:1em;" />  
 
-Guaranteed end-to-end encrypted chats are marked with a green checkmark.
-If you are creating a group with green-checkmarked contacts 
-then you will automatically get a green-checkmarked chat group. 
-
-True to our UX security design goal, 
-users do not need to understand key management, 
-let alone the intricacies of public key cryptography.
-Delta Chat 1.42 users rather scan each other's "QR Invite code" 
-which sets up guaranteed 1:1 chats between individuals, 
-and allows to securely join a guaranteed end-to-end encrypted group chat. 
-All members of a green-checkmarked chat group 
-enjoy guaranteed end-to-end encrypted chats with each other,
-and can add each other to yet more such groups. 
-**Guaranteed end-to-end encryption spreads automatically**
-and is always based on a QR-code scan you did yourself with at least one other person. 
-
 Read more in our [revised Encryption and Security FAQ](https://delta.chat/en/help#encryption-and-security) 
-which is also contained and shipped with all Delta Chat apps. 
-While we did many physical and online user-tests
-there still might be issues or bugs.
-Please report them to [the forum](https://support.delta.chat) 
+which is also contained and shipped with all Delta Chat apps,
+and also discusses security-relevant topics such as OpenPGP security, 
+Metadata protection and ephemeral messaging. 
+
+Lastly, you may read a lot more technical and scientific background on our 
+[new SecureJoin protocols documentation site](https://securejoin.delta.chat)
+which also serves to prepare an independent security audit scheduled for 2024. 
+
+## A lot of other good news (and submit the bugs, please!)
+
+The 1.42 releases also contain many other improvements, among them:
+
+- 🔄 Accept/Blocked, Archived, Pinned, Mute is synced across all your devices,
+
+- 🗜️ Images are now compressed (unless you send them as files),
+
+- 🖼️ Global Gallery with your pictures, documents, media across all chats,
+
+- 🐞 Bug fixes, bug fixes and more bug fixes.
+
+Please report any further bugs or issues to [the forum](https://support.delta.chat) 
 or on our [core Rust issue tracker](https://github.com/deltachat/deltachat-core-rust/issues).
-
-
