make feature-image landscape so it is not cropped
also move all images to `blob` dir (`home` dir is for `index.html`)

--- a/_posts/2023-11-20-jumbo-42.md
+++ b/_posts/2023-11-20-jumbo-42.md
@@ -1,7 +1,7 @@
 ---
 title: Guaranteed End-to-End encryption and other good news
 author: holga
-image: ../assets/home/green-checkmark.svg
+image: ../assets/blog/2023-11-green-checkmark-wide.png
 ---
 
 ![E2EE from now on](../assets/blog/e2ee-activated.png)
@@ -17,7 +17,7 @@ for guaranteed end-to-end encryption.
 
 ## Autocrypt: convenient but "opportunistic" E2E security 
 
-<img src="../assets/logos/autocrypt.svg" width="140" style="float:right; margin-left:1em;" />  
+<img src="../assets/logos/autocrypt.svg" width="140" style="float:right; margin-left:1em;" />
 
 Let us recall two frequent criticism of Delta Chat's [Autocrypt](https://autocrypt.org) 
 end-to-end encryption and its *opportunistic* nature: 
@@ -63,7 +63,7 @@ Moreover, all members use guaranteed end-to-end encrypted chats with each other,
 and they can add each other to more and different green checkmarked group chats. 
 **Guaranteed end-to-end encryption spreads automatically and in a decentralized way.**
 
-<img src="../assets/home/green-checkmark.svg" width="140" style="float:right; margin-left:1em;" />  
+<img src="../assets/blog/green-checkmark.svg" width="140" style="float:right; margin-left:1em;" />  
 
 Read more in our [revised Encryption and Security FAQ](https://delta.chat/en/help#encryption-and-security) 
 which is also contained and shipped with all Delta Chat apps,
