print some more basic concepts bold
(esp. as we also bolden the bad things in the section
'convenient but "opportunistic"')

--- a/_posts/2023-11-20-jumbo-42.md
+++ b/_posts/2023-11-20-jumbo-42.md
@@ -6,7 +6,7 @@ image: ../assets/blog/2023-11-green-checkmark-wide.png
 
 ![E2EE from now on](../assets/blog/e2ee-activated.png)
 Our rolling 1.42 Delta Chat app releases introduce 
-guaranteed end-to-end encryption, 
+**guaranteed end-to-end encryption,**
 a major security milestone that took many hundreds of hours 
 of challenging work from core Delta Chat teams, experts and collaborators.
 Friends from activist circles, users and operators of security-related helplines,
@@ -47,7 +47,7 @@ and protects against compromised servers or networks.
 
 ## Guaranteed end-to-end encryption
 
-Chats marked with a green checkmark guarantee end-to-end encryption:
+Chats marked with a **green checkmark** guarantee end-to-end encryption:
 You will only send and receive end-to-end encrypted messages
 that can not be read or modified by hostile e-mail servers or networks.
 
