refined "more changes section"

--- a/_posts/2023-11-20-jumbo-42.md
+++ b/_posts/2023-11-20-jumbo-42.md
@@ -1,5 +1,5 @@
 ---
-title: Guaranteed End-to-End encryption and other good news
+title: Guaranteed End-to-End encryption and many other good news
 author: holga
 image: ../assets/blog/2023-11-green-checkmark-wide.png
 ---
@@ -74,17 +74,29 @@ Lastly, you may read a lot more technical and scientific background on our
 [new SecureJoin protocols documentation site](https://securejoin.delta.chat)
 which also serves to prepare an independent security audit scheduled for 2024. 
 
-## A lot of other good news (and submit the bugs, please!)
+## A lot of other good news with 1.42 
 
 The 1.42 releases also contain many other improvements, among them:
 
-- 🔄 Accept/Blocked, Archived, Pinned, Mute is synced across all your devices,
+- 🔄 Accept/Blocked, Archived, Pinned, Mute actions are now synced across all your devices,
 
-- 🗜️ Images are now compressed (unless you send them as files),
+- 🗜️ Images are now compressed also on Desktop (unless you send them as files), 
 
 - 🖼️ Global Gallery with your pictures, documents, media across all chats,
+  now also on Desktop 
 
-- 🐞 Bug fixes, bug fixes and more bug fixes.
+- ❤️  Reactions can be enabled in Android advanced settings 
+
+- 🐞 Bug fixes, bug fixes and more bug fixes (all dev areas got many issues
+  resolved -- Android went from a dozen PRs and roughly 50 issues [to 5](https://github.com/deltachat/deltachat-android/issues)
+
+For complete lists of changes see: 
+
+- [Desktop changes](https://github.com/deltachat/deltachat-desktop/blob/master/CHANGELOG.md) 
+- [Android changes](https://github.com/deltachat/deltachat-android/blob/master/CHANGELOG.md) 
+- [iOS changes](https://github.com/deltachat/deltachat-ios/blob/master/CHANGELOG.md) 
+- [core Rust
+  changes](https://github.com/deltachat/deltachat-core-rust/blob/main/CHANGELOG.md) 
 
 Please report any further bugs or issues to [the forum](https://support.delta.chat) 
 or on our [core Rust issue tracker](https://github.com/deltachat/deltachat-core-rust/issues).
