remove "no question"

--- a/_posts/2023-11-20-jumbo-42.md
+++ b/_posts/2023-11-20-jumbo-42.md
@@ -36,7 +36,7 @@ end-to-end encryption and its *opportunistic* nature:
   if their chat partners don't consistently use Autocrypt-capable apps.
   They would send an un-encrypted message and only notice it after they sent a message. 
   In practise, this is less of a problem than many experts think 
-  but no question: it is a valid concern. 
+  but it still is a valid concern. 
 
 <img src="../assets/blog/join_verified_group.jpg" width="240" style="float:right; margin-left: 1em;" />
 
